Added ProjectController and updated service layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=product_backlog
-server.port=8080
+server.port=8084
 
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/product_backlog
+spring.datasource.url=jdbc:mysql://localhost:3306/AgileFlow
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
