--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.security.enabled=false
-
+spring.security.enabled=true
+# JWT Properties
+jwt.secret=yourSecretKeyHereShouldBeAtLeast256BitsLongForSecurity
+jwt.expiration=86400000
 
 
