convert to DTOs and add more tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.security.enabled=true
 # JWT Properties
 jwt.secret=yourSecretKeyHereShouldBeAtLeast256BitsLongForSecurity
 jwt.expiration=86400000
-
+spring.main.allow-circular-references=true
 
