--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.security.enabled=true
 jwt.secret=yourSecretKeyHereShouldBeAtLeast256BitsLongForSecurity
 jwt.expiration=86400000
 spring.main.allow-circular-references=true
+logging.level.org.springframework.security=DEBUG
 
